--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
   padding-left: 0;
   box-sizing: border-box;
   font-family: "Anonymous Pro", monospace;
+  border: none;
 }
 
 html {
@@ -17,6 +18,7 @@ body {
 .container {
   width: min(90vw, 800px);
   margin: auto;
+  
   -webkit-animation: fadeIn 2.5s ease-in-out;
   -moz-animation: fadeIn 2.5s ease-in-out;
   -o-animation: fadeIn 2.5s ease-in-out;
@@ -90,6 +92,13 @@ header img:hover {
   transition: 0.7s;
 }
 
+.interactions button:focus{
+        outline: thin dotted;
+        outline: 0px auto -webkit-focus-ring-color;
+        outline-offset: 0px;
+}
+
+/* FOOTER ============*/
 footer {
   margin-top: 100px;
   width: 100%;
@@ -215,7 +224,7 @@ footer div li {
 }
 
 /* Modal ===========*/
-.modal-overlay {
+.modal-overlayMusic, .modal-overlayScrap {
   width: 100%;
   height: 100%;
 
@@ -232,15 +241,121 @@ footer div li {
   visibility: hidden;
 }
 
-.modal-overlay.active {
+.modal-overlayMusic.active, .modal-overlayScrap.active {
   opacity: 1;
   visibility: visible;
 }
 
 .modal {
-  background: #f0f2f5;
+  background: #000000;
   padding: 2.4rem;
   width: 90%;
   max-width: 500px;
   border-radius: 0.3rem;
+  color: #facc25;
+}
+
+form{
+    max-width: 500px;
+}
+
+
+form input{
+    border: 0px;
+    border-radius: 0.3rem;
+
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 30px;
+
+    width: 100%;
+
+    font-size: 20px;
+}
+
+form small{
+
+    display: flex;
+    padding: 1px 0 15px 0;
+
+    font-size: 1em;
+    
+}
+
+.input-group {
+    margin-top: 20px
+}
+
+.input-group.actions{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.input-group.actions .button,
+.input-group.actions button {
+    width: 30%;
+       
+}
+
+button{
+    width: 100%;
+    height: 50px;
+    border: none;
+    color: white;
+    background: #facc25;
+    padding: 0;
+    border-radius: 1.2rem;
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+form label{
+    font-size: 20px;
+}
+
+button img {
+    visibility: hidden;
+    
+    height: 1px;
+}
+
+button:hover img{
+           
+        visibility: visible;
+        height: 30px;
+        transition: 0.5s;
+    
+}
+
+button:focus{
+    outline: thin dotted;
+    outline: 0px auto -webkit-focus-ring-color;
+    outline-offset: 0px;
+    transition: 0.5s;
+    visibility: hidden;
+}
+
+
+
+.button.cancel {
+    color: #fff;
+    border: 2px rgb(255, 255, 255) solid;
+    border-radius: 1.2em;
+    height: 50px;
+    
+    display:flex;
+    align-items: center;
+    justify-content: center;
+
+    opacity: 1;
+}
+
+.button.cancel:hover{
+    border: 2px solid #c2c2c2;
+    color: #c2c2c1
 }
