--- a/styles.css
+++ b/styles.css
@@ -295,6 +295,8 @@ form small{
 .input-group.actions .button,
 .input-group.actions button {
     width: 30%;
+    font-size: 20px;
+    
        
 }
 
@@ -312,23 +314,23 @@ button{
     align-items: center;
     justify-content: center;
     gap: 5px;
+
+    transition: 0.5s;
+    
 }
 
 form label{
     font-size: 20px;
 }
 
-button img {
-    visibility: hidden;
-    
-    height: 1px;
-}
 
-button:hover img{
+
+button:hover{
            
-        visibility: visible;
-        height: 30px;
-        transition: 0.5s;
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
+    transition: 0.5s;
     
 }
 
@@ -353,9 +355,17 @@ button:focus{
     justify-content: center;
 
     opacity: 1;
+
+    transition: 0.5s
 }
 
 .button.cancel:hover{
     border: 2px solid #c2c2c2;
-    color: #c2c2c1
+    color: #c2c2c1;
+
+
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
+    transition: 05.s;
 }
