--- a/styles.css
+++ b/styles.css
@@ -300,7 +300,7 @@ form small{
        
 }
 
-button{
+form button{
     width: 100%;
     height: 50px;
     border: none;
@@ -325,7 +325,7 @@ form label{
 
 
 
-button:hover{
+form button:hover{
            
     -webkit-transform: scale(1.2);
     -ms-transform: scale(1.2);
@@ -334,7 +334,7 @@ button:hover{
     
 }
 
-button:focus{
+form button:focus{
     outline: thin dotted;
     outline: 0px auto -webkit-focus-ring-color;
     outline-offset: 0px;
